fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&family=Poppins:ital,wght@0,300;0,400;0,500;1,600&family=Quantico:ital,wght@0,700;1,400&family=Square+Peg&display=swap');
 
-body {
-  overflow-x: hidden;
-}
 * {
   margin: 0;
   padding: 0;
@@ -12,6 +9,8 @@ body {
   text-align: center;
   background-color: #5daa68;
   color: #e1e2e2;
+  overflow-x: hidden;
+  position: relative;
   min-height: 100vh;
   display: flex;
   justify-content: center;
